--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "str3aks",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +14,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.28.5",
+    "dotenv": "^10.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
